--- a/loginusser/style.css
+++ b/loginusser/style.css
@@ -81,7 +81,7 @@ button {
     border-radius: 10px;
     margin-top: 30px;
     color: #eee;
-    background-color: #2121bb, #;
+    background-image:linear-gradient(to right, #121275, #490f80);
     cursor: pointer;
     transition: 0.3s ease;
 }
